--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oliver Geißendörfer - personal webpage</title>
-	<link rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+    <title>Oliver Geißendörfer - Personal Webpage</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -14,132 +15,123 @@
             background-color: #f8f9fa;
             color: #333;
         }
+
         header {
             text-align: center;
             padding: 20px;
             background-color: #004466;
             color: white;
         }
+
         header img {
             max-width: 150px;
             border-radius: 50%;
         }
+
         header h1 {
             margin: 10px 0;
             font-size: 2.5rem;
         }
-        nav {
-            text-align: center;
-            margin: 20px 0;
-        }
-        nav a {
-            margin: 0 15px;
-            color: #004466;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        section {
+
+        main {
             max-width: 900px;
             margin: 20px auto;
+        }
+
+        section {
+            margin-bottom: 40px;
             padding: 20px;
             background: white;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         section h2 {
             margin-bottom: 20px;
             color: #004466;
         }
+
         footer {
             text-align: center;
             padding: 20px;
             background-color: #004466;
             color: white;
         }
-		
-		.about-container {
-			display: flex;                  /* Use flexbox for layout */
-			align-items: flex-start;        /* Align image and text to the top */
-			gap: 20px;                      /* Space between image and text */
-		}
 
-		.profile-image {
-			width: auto;                    /* Auto width to maintain aspect ratio */
-			height: 100%;                   /* Full height of the text container */
-			max-height: 300px;              /* Prevent image from becoming too tall */
-			object-fit: cover;              /* Ensure the image scales well */
-			float: right;                    /* Float the image to the left, right */
-			border-radius: 10px;            /* Optional: add rounded corners */
-		}
+        /* About Section */
+        .about-container {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+        }
 
-		.about-text {
-			flex: 1;                        /* Allow the text to take up remaining space */
-		}
+        .profile-image {
+            width: auto;
+            height: 100%;
+            max-height: 300px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
 
-		.contact-links {
-			display: flex;                  /* Flexbox container */
-			justify-content: space-around;  /* Space between items */
-			align-items: center;            /* Vertical alignment of items */
-			margin-top: 20px;
-			gap: 20px;                      /* Consistent spacing between items */
-		}
+        .about-text {
+            flex: 1;
+        }
 
-		.contact-links a {
-			text-decoration: none;          /* Remove underline from links */
-			display: inline-block;          /* Ensure consistent sizing */
-		}
+        .contact-links {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+        }
 
-		.contact-links img {
-			width: 50px;                    /* Standard size for all logos */
-			height: 50px;
-			transition: transform 0.2s;     /* Add a hover effect */
-		}
+        .contact-links a img {
+            width: 24px;
+            height: 24px;
+            transition: transform 0.2s;
+        }
 
-		.contact-links img:hover {
-			transform: scale(1.1);          /* Slightly enlarge the icon on hover */
-		}
-		
-		@media (max-width: 600px) {
-			.contact-links {
-				flex-direction: column;
-				gap: 10px;
-			}
-		}
+        .contact-links a img:hover {
+            transform: scale(1.1);
+        }
 
-		#about {
-			max-width: 900px;
-			margin: 20px auto;
-			padding: 20px;
-			background: white;
-			box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-		}
+        /* Timeline */
+        #timeline {
+            border-left: 3px solid #004466;
+            padding: 20px;
+        }
 
-        #timeline-embed {
-			height: 600px; /* Fixed height for proper rendering */
-			width: 100%;
-			overflow: hidden; /* Prevent any overflowing elements */
-		}
+        .timeline-item {
+            margin-bottom: 30px;
+            padding-left: 20px;
+            position: relative;
+        }
 
-		/* Make media display below the headline */
-		.tl-media img {
-			display: block;
-			margin: 10px auto; /* Center the image */
-			width: 100%; /* Use full width */
-			max-width: 800px; /* Optional: Limit maximum width for larger screens */
-			height: auto; /* Maintain aspect ratio */
-		}
+        .timeline-item::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: -9px;
+            width: 18px;
+            height: 18px;
+            background: #004466;
+            border-radius: 50%;
+        }
 
-		.tl-media .media-credit, .tl-media .media-caption {
-			text-align: center; /* Center-align the caption and credit */
-			font-size: 0.9rem;
-			color: #666;
-			margin-top: 5px;
-		}
+        .timeline-item h3 {
+            font-size: 1.5rem;
+            color: #004466;
+            margin-bottom: 5px;
+        }
 
-		.tl-headline {
-			margin-bottom: 15px; /* Add space between headline and media */
-			font-size: 1.5rem; /* Customize headline size */
-			font-weight: bold;
-		}
+        .timeline-item p {
+            margin: 0;
+            color: #666;
+        }
+
+        .timeline-item img {
+            width: 100%;
+            max-width: 100%;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -148,99 +140,81 @@
         <h1>Oliver Geißendörfer</h1>
         <p>Engineer | Researcher | Innovator | Collaborator</p>
     </header>
-    <!--<nav>
-        <a href="#about">About</a>
-        <!{1}**<a href="#projects">Research Projects</a>**{1}>
-        <a href="#publications">My Publications</a>
-        <!{1}**<a href="#contact">Contact</a>**{1}>
-    </nav>-->
-    <section id="about">
-        <h2>About Me</h2>
-		<div class="about-container">
-			<img src="ProfileAI.png" alt="Profile Picture" class="profile-image">
-			<div class="about-text">
-				<p>
-					Welcome to my digital space! I am a Scientific Employee at Technical University of Munich, 
-					specializing in Point Cloud processing, segmentation and visualization. My work focuses on bridging the gap 
-					between academic research and environmental as well as industrial applications. With a commitment to driving 
-					innovation, I am eager to collaborate with like-minded individuals and companies 
-					to make a meaningful impact.
-				</p>
-				<div class="contact-links">
-					<a href="mailto: oliver.geissendoerfer@gmail.com"><img src="https://www.svgrepo.com/show/14478/email.svg" alt="Email Icon" style="width: 24px; height: 24px; vertical-align: middle;"></a>
-					<a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a>
-					<a href="https://www.linkedin.com/in/oliver-geißendörfer"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn Logo" style="width: 24px; height: 24px; vertical-align: middle;"></a>
-					<a href="CV"><img src="lebenslauf.png" alt="CV" style="width: 24px; height: 24px; vertical-align: middle;"></a>
-				</div>
-			</div>
-		</div>
-        <!--<p>
-            Feel free to browse through my CV highlights, explore my research projects, and 
-            dive into my interactive publication timeline.
-        </p>-->
-    </section>
-	<!--
-    <section id="projects">
-        <h2>Research Projects</h2>
-        <p>Here are some of the exciting research projects I've worked on:</p>
-        <ul>
-            <li>Project 1: PROVILAS</li>
-            <li>Project 2: Sustainability day</li>
-			<li>Project 3: Intuitive neighborhood search</li>
-            <li>Project 3: Hensoldt</li>
-        </ul>
-    </section>
-	//-->
-    <section id="publications">
-        <h2>Publications</h2>
-        <div id="timeline-embed"></div>
-    </section>
-    
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <div class="about-container">
+                <img src="ProfileAI.png" alt="Profile Picture" class="profile-image">
+                <div class="about-text">
+                    <p>
+                        Welcome to my digital space! I am a Scientific Employee at the Technical University of Munich, 
+                        specializing in Point Cloud processing, segmentation, and visualization. My work bridges academic research 
+                        with industrial and environmental applications, driving meaningful innovation.
+                    </p>
+                    <div class="contact-links">
+                        <a href="mailto:oliver.geissendoerfer@gmail.com"><img src="https://www.svgrepo.com/show/14478/email.svg" alt="Email"></a>
+                        <a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar"></a>
+                        <a href="https://www.linkedin.com/in/oliver-geißendörfer"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn"></a>
+                        <a href="CV"><img src="lebenslauf.png" alt="CV"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="publications">
+            <h2>Publications</h2>
+            <div id="timeline"></div>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 Oliver Geißendörfer. All Rights Reserved.</p>
     </footer>
-
-    <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
     <script>
-        // Example timeline data
-		const timelineData = {
-			events: [
-				{
-					start_date: { year: "2025" },
-					text: { headline: "3D Point Cloud Frequencies", text: "Details about your publication." }
-				},
-				{
-					start_date: { year: "2024", month: "08" },
-					text: { headline: "LiDAR and Frequency Analysis", text: "Details about another publication." }
-				},
-				{
-					start_date: { year: "2023", month: "04" },
-					text: { headline: "Efficient Point Cloud Querying", text: "Details about your first publication." }
-				}
-			]
-		};
+        const timelineData = [
+            {
+                year: "2025",
+                title: "3D Point Cloud Frequencies",
+                description: "Details about your third publication. <a href='https://example.com'>Read more</a>.",
+                image: null
+            },
+            {
+                year: "2024",
+                title: "Combining LiDAR and Time Domain Frequency Analysis",
+                description: "Details about your second publication. <a href='https://example.com'>Read more</a>.",
+                image: "https://via.placeholder.com/600x300"
+            },
+            {
+                year: "2023",
+                title: "Efficient In-Memory Point Cloud Query Processing",
+                description: "Details about your first publication. <a href='https://example.com'>Read more</a>.",
+                image: null
+            }
+        ];
 
-		// Sort events by date (newest first)
-		timelineData.events.sort((a, b) => {
-			const dateA = new Date(
-				parseInt(a.start_date.year),
-				parseInt(a.start_date.month || 1) - 1
-			);
-			const dateB = new Date(
-				parseInt(b.start_date.year),
-				parseInt(b.start_date.month || 1) - 1
-			);
-			return dateB - dateA; // Newest first
-		});
-		
-		console.log("Sorted Events:", timelineData.events);
+        // Sort the data (newest first)
+        timelineData.sort((a, b) => parseInt(b.year) - parseInt(a.year));
 
-		// Initialize TimelineJS with custom class
-		window.timeline = new TL.Timeline('timeline-embed', timelineData, {
-			layout: "vertical", // Suggest vertical layout
-			timenav_position: "left", // Navigation on the left
-			css_class: "custom-vertical" // Apply custom CSS class
-		});
+        // Render the timeline
+        const timelineContainer = document.getElementById("timeline");
+        timelineData.forEach(event => {
+            const item = document.createElement("div");
+            item.classList.add("timeline-item");
+
+            const title = document.createElement("h3");
+            title.innerHTML = `${event.year}: ${event.title}`;
+            item.appendChild(title);
+
+            const description = document.createElement("p");
+            description.innerHTML = event.description;
+            item.appendChild(description);
+
+            if (event.image) {
+                const image = document.createElement("img");
+                image.src = event.image;
+                item.appendChild(image);
+            }
+
+            timelineContainer.appendChild(item);
+        });
     </script>
 </body>
 </html>
