--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                 image: "https://via.placeholder.com/600x300"
             },
             {
-                year: "2023",
                 title: "Efficient In-Memory Point Cloud Query Processing",
-                description: "Details about your first publication. <a href='https://example.com'>Read more</a>.",
-                image: null
+                description: "Details about your first publication. <a href='https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf'>Read more</a>.",
+                image: null,
+				year: "2023"
             }
         ];
 
