--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
                 description: "Details about your second publication. <a href='https://example.com'>Read more</a>.",
-                image: "https://via.placeholder.com/600x300"
+                image: "IEEE2024"
             },
             {
                 title: "Efficient In-Memory Point Cloud Query Processing",
