--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
                 description: "Details about your second publication. <a href='https://example.com'>Read more</a>.",
-                image: "IEEE2024"
+                image: "IEEE2024.png"
             },
 			{
                 year: "2025",
