--- a/index.html
+++ b/index.html
@@ -77,20 +77,29 @@
         }
 
         .contact-links {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
+			display: flex;                  /* Use flexbox for layout */
+			justify-content: space-evenly;  /* Evenly space logos across the width */
+			align-items: center;            /* Vertically align items */
+			margin-top: 20px;
+			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
+		}
 
-        .contact-links a img {
-            width: 24px;
-            height: 24px;
-            transition: transform 0.2s;
-        }
+		.contact-links a img {
+			width: 24px;                    /* Standard size for all logos */
+			height: 24px;
+			transition: transform 0.2s;     /* Add a hover effect */
+		}
 
-        .contact-links a img:hover {
-            transform: scale(1.1);
-        }
+		.contact-links a img:hover {
+			transform: scale(1.1);          /* Slightly enlarge the icon on hover */
+		}
+
+		@media (max-width: 600px) {
+			.contact-links {
+				flex-direction: column;     /* Stack icons vertically on small screens */
+				gap: 10px;                  /* Add spacing between items */
+		}
+	}
 
         /* Timeline */
         #timeline {
@@ -152,11 +161,19 @@
                         with industrial and environmental applications, driving meaningful innovation.
                     </p>
                     <div class="contact-links">
-                        <a href="mailto:oliver.geissendoerfer@gmail.com"><img src="https://www.svgrepo.com/show/14478/email.svg" alt="Email"></a>
-                        <a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar"></a>
-                        <a href="https://www.linkedin.com/in/oliver-geißendörfer"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn"></a>
-                        <a href="CV"><img src="lebenslauf.png" alt="CV"></a>
-                    </div>
+						<a href="mailto:oliver.geissendoerfer@gmail.com">
+							<img src="https://www.svgrepo.com/show/14478/email.svg" alt="Email">
+						</a>
+						<a href="https://scholar.google.com/citations?user=ViVG5yEAAAAJ&hl=de">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar">
+						</a>
+						<a href="https://www.linkedin.com/in/oliver-geißendörfer">
+							<img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" alt="LinkedIn">
+						</a>
+						<a href="CV">
+							<img src="lebenslauf.png" alt="CV">
+						</a>
+					</div>
                 </div>
             </div>
         </section>
