--- a/index.html
+++ b/index.html
@@ -187,18 +187,17 @@
     </footer>
     <script>
         const timelineData = [
-            
             {
-                year: "2024",
-                title: "Combining LiDAR and Time Domain Frequency Analysis",
-                description: "Details about your second publication. <a href='https://example.com'>Read more</a>.",
-                image: "IEEE2024.png"
-            },
-			{
-                year: "2025",
+                year: null,
                 title: "3D Point Cloud Frequencies",
                 description: "Details about your third publication. <a href='https://example.com'>Read more</a>.",
                 image: null
+            },
+            {
+                year: "2024",
+                title: "Combining LiDAR and Time Domain Frequency Analysis",
+                description: "Details about your second publication. <a href='https://ieeexplore.ieee.org/abstract/document/10648750'>Read more</a>.",
+                image: "IEEE2024.png"
             },
             {
 				year: "2023",
