--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         .contact-links {
 			display: flex;                  /* Use flexbox for layout */
-			justify-content: space-between;  /* Evenly space logos across the width */
+			justify-content: space-between;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
 			align-items: center;            /* Vertically align items */
 			margin-top: 20px;
 			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
