--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 		.about-text {
 			display: flex;                  /* Make the text container a flexbox */
 			flex-direction: column;         /* Arrange content vertically */
-			justify-content: space-between; /* Push .contact-links to the bottom */
+			justify-content: felex-start; /* Push .contact-links to the bottom */
 			flex: 1;                        /* Allow it to take up remaining space */
+			position: relative;
 		}
 
 		.profile-image {
@@ -83,10 +84,11 @@
         }
 
         .contact-links {
+			margin-top: auto;				/* Push the logos to the bottom of the container */
 			display: flex;                  /* Use flexbox for layout */
-			justify-content: space-between;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
+			justify-content: space-evenly;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
 			align-items: center;            /* Vertically align items */
-			margin-top: 20px;
+			padding-top: 20px;
 			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
 		}
 
