--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         .contact-links {
 			margin-top: auto;				/* Push the logos to the bottom of the container */
 			display: flex;                  /* Use flexbox for layout */
-			justify-content: space-evenly;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
+			justify-content: space-between;  /* Evenly space logos across the width  commands -evenly, -between, -around*/
 			align-items: center;            /* Vertically align items */
-			padding-top: 20px;
+			padding-top: 50px;
 			gap: 0;                         /* No extra gaps needed since space-evenly handles spacing */
 		}
 
