--- a/index.html
+++ b/index.html
@@ -218,22 +218,19 @@
             {
                 year: "2025",
                 title: "3D Point Cloud Frequencies",
-                description: "Details about your third publication.",
-				link: "https://example.com",
+                description: "Details about your third publication. <a href='https://example.com'>Read more</a>.",
                 image: null
             },
             {
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
-                description: "Details about your second publication.,
-				link: "https://ieeexplore.ieee.org/abstract/document/10648750",
+                description: "Details about your second publication. <a href='https://ieeexplore.ieee.org/abstract/document/10648750'>Read more</a>.",
                 image: "IEEE2024.png"
             },
             {
 				year: "2023",
                 title: "Efficient In-Memory Point Cloud Query Processing",
-                description: "Details about your first publication." 
-				link: "https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf",
+                description: "Details about your first publication. <a href='https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf'>Read more</a>.",
                 image: null
             }
         ];
@@ -248,38 +245,21 @@
             item.classList.add("timeline-item");
 
             const title = document.createElement("h3");
-			title.innerText = event.title;
-			item.appendChild(title);
+            title.innerHTML = `${event.year}: ${event.title}`;
+            item.appendChild(title);
 
-			const description = document.createElement("p");
-			description.innerText = event.description;
-			item.appendChild(description);
+            const description = document.createElement("p");
+            description.innerHTML = event.description;
+            item.appendChild(description);
 
-			const details = document.createElement("div");
-			details.classList.add("publication-details");
+            if (event.image) {
+                const image = document.createElement("img");
+                image.src = event.image;
+                item.appendChild(image);
+            }
 
-			const readMore = document.createElement("a");
-			readMore.href = event.link;
-			readMore.innerText = "Read more";
-			readMore.classList.add("read-more");
-			details.appendChild(readMore);
-
-			const year = document.createElement("span");
-			year.innerText = event.year;
-			year.classList.add("year");
-			details.appendChild(year);
-
-			item.appendChild(details);
-
-			if (event.image) {
-				const image = document.createElement("img");
-				image.src = event.image;
-				image.alt = `${event.title} Image`;
-				item.appendChild(image);
-			}
-
-			timelineContainer.appendChild(item);
-		});
+            timelineContainer.appendChild(item);
+        });
     </script>
 </body>
 </html>
