--- a/index.html
+++ b/index.html
@@ -219,21 +219,21 @@
             {
                 year: "2025",
                 title: "3D Point Cloud Frequencies",
-                description: "Details about your third publication."
+                description: "Details about your third publication.",
 				link: "https://example.com",
                 image: null
             },
             {
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
-                description: "Details about your second publication."
+                description: "Details about your second publication.",
 				link: "https://ieeexplore.ieee.org/abstract/document/10648750",
                 image: "IEEE2024.png"
             },
             {
 				year: "2023",
                 title: "Efficient In-Memory Point Cloud Query Processing",
-                description: "Details about your first publication." 
+                description: "Details about your first publication." ,
 				link: "https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf",
                 image: null
             }
